environments/azure/dev/apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: default
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix  # Specify pathType (required in v1)
            backend:
              service:
                name: hello-kubernetes  # Service name here
                port:
                  number: 80  # Service port here
